fix pre load flicker

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -69,6 +69,7 @@
 
 .link {
     margin-left: 16px;
+    display: inline-block;
 }
 
 .link--styles {
